# grammers

grammers-client/src/message/: button.rs
grammers-mtsender/src/: sender_pool.rs
grammers-tl-types/tl/: api.tl
lib/grammers/: Cargo.toml
lib/grammers-tl-types/tl/: api.tl
lib/grammers/src/: bridge.rs
lib/grammers/src/backend/: mod.rs  peer_cache.rs
lib/grammers/src/frontend/: generated.rs  mod.rs
lib/grammers/ui/: enums.slint  types.slint
